# ThermaLM

./: settings.gradle.kts
ThermaLM/: build.gradle.kts
ThermaLM/src/androidTest/java/com/example/thermalm/: ExampleInstrumentedTest.kt
ThermaLM/src/main/cpp/: CMakeLists.txt  native-lib.cpp
ThermaLM/src/main/java/com/example/thermalm/: LlamaBridge.kt  Models.kt
ThermaLM/src/test/java/com/example/thermalm/: ExampleUnitTest.kt
app/: build.gradle.kts
app/src/androidTest/java/com/example/thermalawarellmscheduler/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/thermalawarellmscheduler/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
